test/corpus/table.txt
================================================================================
Empty Table definition
================================================================================

Table table_name {

}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)))

================================================================================
Empty table definition
================================================================================

table table_name {

}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)))

================================================================================
Simple public table definition
================================================================================

Table people {
  id int
  name varchar
  is_adult boolean
  is_adult custom_type
  created_at datetime
  updated_at datetime

  Note: "This is a note"
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (note
      (note_text
        (string)))))

================================================================================
Simple scoped table definition
================================================================================

Table app.people {
  id int
  name varchar
  is_adult boolean
  created_at datetime
  updated_at datetime

  Note: "This is a note"
}

--------------------------------------------------------------------------------

(schema
  (table
    (schema_name)
    (table_name)
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (column
      (column_name)
      (type))
    (note
      (note_text
        (string)))))

================================================================================
Table with unary column settings
================================================================================

Table people {
  id int [primary key]
  name varchar [unique, not null]
  is_adult boolean [not null]
  created_at datetime [not null]
  updated_at datetime [null, note: "Handled by ORM"]
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (column
      (column_name)
      (type)
      (column_settings
        (primary_key_setting)))
    (column
      (column_name)
      (type)
      (column_settings
        (unique_setting)
        (not_null_setting)))
    (column
      (column_name)
      (type)
      (column_settings
        (not_null_setting)))
    (column
      (column_name)
      (type)
      (column_settings
        (not_null_setting)))
    (column
      (column_name)
      (type)
      (column_settings
        (null_setting)
        (note
          (note_text
            (string)))))))

================================================================================
Table with binary column settings
================================================================================

Table people {
  id int [pk]
  name varchar [default: null]
  is_adult boolean [default: false]
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (column
      (column_name)
      (type)
      (column_settings
        (primary_key_setting)))
    (column
      (column_name)
      (type)
      (column_settings
        (default_setting
          (value))))
    (column
      (column_name)
      (type)
      (column_settings
        (default_setting
          (value))))))

================================================================================
Table with alias
================================================================================

Table people as Ppl {
  id int [pk]
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (table_alias)
    (column
      (column_name)
      (type)
      (column_settings
        (primary_key_setting)))))

================================================================================
Table with settings
================================================================================

Table people [headercolor: "#555555", focus] {
  id int [pk]
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (table_settings
      (key_value
        (key)
        (value
          (string)))
      (keyword))
    (column
      (column_name)
      (type)
      (column_settings
        (primary_key_setting)))))

================================================================================
Multiline string
================================================================================

table notes {
  Note: '''
    # Hello world

    This is a multiline string
  '''
}

--------------------------------------------------------------------------------

(schema
  (table
    (table_name)
    (note
      (note_text
        (multiline_string)))))
